now reflects changes to python code

--- a/examples/bids_subj.ipynb
+++ b/examples/bids_subj.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import newmri as newmri"
+    "import mymri"
    ]
   },
   {
@@ -18,8 +18,16 @@
     "study = '/Volumes/babylab/Desktop/multicue_att'\n",
     "id_correction = '/Volumes/svndl/RAW_DATA/id_correction.json'\n",
     "record = '/Volumes/svndl/RAW_DATA/completed_files.txt'\n",
-    "reload(newmri)\n",
-    "newmri.bids_organizer(study, id_correction, record, run_all=True)"
+    "bids_organizer(study, id_correction, record, run_all=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mymri.preproces?"
    ]
   },
   {
