--- a/examples/bids_subj.ipynb
+++ b/examples/bids_subj.ipynb
@@ -15,10 +15,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = '/Volumes/babylab/Desktop/multicue_att'\n",
-    "id_correction = '/Volumes/svndl/RAW_DATA/id_correction.json'\n",
-    "record = '/Volumes/svndl/RAW_DATA/completed_files.txt'\n",
-    "bids_organizer(study, id_correction, record, run_all=True)"
+    "study = '/nimsfs/amnorcia/phasetacs'\n",
+    "id_correction = '/Volumes/svndl/RAW_DATA/correction_files/id_correction.json'\n",
+    "run_correction = '/Volumes/svndl/RAW_DATA/correction_files/phasetacs_runcorrection.json'\n",
+    "record = '/Volumes/svndl/RAW_DATA/numbers_completed_files.txt'\n",
+    "mymri.bids_organizer(study, id_correction, run_correction, record, run_all=True)"
    ]
   },
   {
@@ -27,8 +28,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mymri.preproces?"
+    "study = '/nimsfs/jlmcc/untitled'\n",
+    "id_correction = '/Volumes/svndl/RAW_DATA/correction_files/numbers_idcorrection.json'\n",
+    "run_correction = '/Volumes/svndl/RAW_DATA/correction_files/numbers_runcorrection.json'\n",
+    "record = '/Volumes/svndl/RAW_DATA/numbers_completed_files.txt'\n",
+    "mymri.bids_organizer(study, id_correction, run_correction, record, run_all=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mymri.bids_organizer(study_dir='/Users/kohler/Desktop/RAW', run_all=True, \n",
+    "                     id_correction='/Users/kohler/Desktop/id_correction.json',\n",
+    "                     run_correction='/Users/kohler/Desktop/numbers_correction.json',\n",
+    "                     temp_dir='/Users/kohler/Desktop/TEMP', bids_dir='/Users/kohler/Desktop/BIDS')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
