forgot to add dti folder

--- a/examples/bids_subj.ipynb
+++ b/examples/bids_subj.ipynb
@@ -15,11 +15,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "study = '/nimsfs/amnorcia/headmodel'\n",
+    "id_correction = '/Volumes/svndl/RAW_DATA/correction_files/headmodel_idcorrection.json'\n",
+    "run_correction = '/Volumes/svndl/RAW_DATA/correction_files/headmodel_runcorrection.json'\n",
+    "record = '/Volumes/svndl/RAW_DATA/headmodel_completed_files.txt'\n",
+    "mymri.bids_organizer(study, id_correction, run_correction, record, run_all=True,deface=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "study = '/nimsfs/amnorcia/phasetacs'\n",
-    "id_correction = '/Volumes/svndl/RAW_DATA/correction_files/id_correction.json'\n",
+    "id_correction = '/Volumes/svndl/RAW_DATA/correction_files/phasetacs_idcorrection.json'\n",
     "run_correction = '/Volumes/svndl/RAW_DATA/correction_files/phasetacs_runcorrection.json'\n",
     "record = '/Volumes/svndl/RAW_DATA/numbers_completed_files.txt'\n",
     "mymri.bids_organizer(study, id_correction, run_correction, record, run_all=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "study = '/nimsfs/amnorcia/multifovea'\n",
+    "id_correction = '/Volumes/svndl/RAW_DATA/correction_files/multicue_idcorrection.json'\n",
+    "run_correction = '/Volumes/svndl/RAW_DATA/correction_files/multicue_runcorrection.json'\n",
+    "record = '/Volumes/svndl/RAW_DATA/numbers_completed_files.txt'\n",
+    "mymri.bids_organizer(study, id_correction, run_correction, record, run_all=False)"
    ]
   },
   {
