--- a/examples/bids_subj.ipynb
+++ b/examples/bids_subj.ipynb
@@ -28,6 +28,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "study = '/nimsfs/amnorcia/multicue'\n",
+    "id_correction = '/Volumes/svndl/RAW_DATA/correction_files/multicue_idcorrection.json'\n",
+    "run_correction = '/Volumes/svndl/RAW_DATA/correction_files/multicue_runcorrection.json'\n",
+    "record = '/Volumes/svndl/RAW_DATA/multicue_completed_files.txt'\n",
+    "mymri.bids_organizer(study, id_correction, run_correction, record, run_all=True,deface=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "study = '/nimsfs/amnorcia/phasetacs'\n",
     "id_correction = '/Volumes/svndl/RAW_DATA/correction_files/phasetacs_idcorrection.json'\n",
     "run_correction = '/Volumes/svndl/RAW_DATA/correction_files/phasetacs_runcorrection.json'\n",
@@ -41,11 +54,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = '/nimsfs/amnorcia/multicue'\n",
-    "id_correction = '/Volumes/svndl/RAW_DATA/correction_files/multicue_idcorrection.json'\n",
-    "run_correction = '/Volumes/svndl/RAW_DATA/correction_files/multicue_runcorrection.json'\n",
-    "record = '/Volumes/svndl/RAW_DATA/multicue_completed_files.txt'\n",
-    "mymri.bids_organizer(study, id_correction, run_correction, record, run_all=False)"
+    "study = '/nimsfs/jlmcc/untitled'\n",
+    "id_correction = '/Volumes/svndl/RAW_DATA/correction_files/numbers_idcorrection.json'\n",
+    "run_correction = '/Volumes/svndl/RAW_DATA/correction_files/numbers_runcorrection.json'\n",
+    "record = '/Volumes/svndl/RAW_DATA/numbers_completed_files.txt'\n",
+    "mymri.bids_organizer(study, id_correction, run_correction, record, run_all=True, deface=True)"
    ]
   },
   {
@@ -53,13 +66,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "study = '/nimsfs/jlmcc/untitled'\n",
-    "id_correction = '/Volumes/svndl/RAW_DATA/correction_files/numbers_idcorrection.json'\n",
-    "run_correction = '/Volumes/svndl/RAW_DATA/correction_files/numbers_runcorrection.json'\n",
-    "record = '/Volumes/svndl/RAW_DATA/numbers_completed_files.txt'\n",
-    "mymri.bids_organizer(study, id_correction, run_correction, record, run_all=True)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
